tests/specs/graph/fast_check/return_inference/value_return_err.txt
~~ {"workspaceFastCheck":true} ~~
# workspace_members
[
  {
    "base": "file:///",
    "nv": "@scope/a@1.0.0",
    "exports": {
      ".": "./mod.ts"
    }
  }
]

# mod.ts
export const a = () => {
  return a;
}

export const b = function() {
  return b;
}

export function c() {
  return c;
}

export class D {
  d() {
    return D;
  }
}

export const e = {
  e() {
    return e;
  }
};

// TODO: we don't support this at all
// export const f = class {
//   f() {
//     return 2;
//   }
// };

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "size": 324,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    }
  ],
  "redirects": {}
}

Fast check file:///mod.ts:
  error[unknown-var-type]: unknown type for variable in the public API
   --> /mod.ts:1:14
    |
  1 | export const a = () => {
    |              ^ this variable's type could not be inferred because its initializer
    |              - contains this arrow expression, of which the return type could not be inferred
    |
  2 |   return a;
    |   ------ because the value returned here
    |          - contains this expression, of which the type could not be inferred
    |
    = hint: add an explicit return type annotation to the arrow expression in the variable declaration initializer

    info: all variables in the public API must have a known type
    info: the type of arbitrary expressions can not be inferred without a type checker
    docs: https://jsr.io/go/slow-type-unknown-var-type

  error[unknown-var-type]: unknown type for variable in the public API
   --> /mod.ts:5:14
    |
  5 | export const b = function() {
    |              ^ this variable's type could not be inferred because its initializer
    |              - contains this function expression, of which the return type could not be inferred
    |
  6 |   return b;
    |   ------ because the value returned here
    |          - contains this expression, of which the type could not be inferred
    |
    = hint: add an explicit return type annotation to the function expression in the variable declaration initializer

    info: all variables in the public API must have a known type
    info: the type of arbitrary expressions can not be inferred without a type checker
    docs: https://jsr.io/go/slow-type-unknown-var-type

  error[unknown-return-type]: unknown return type for function in the public API
    --> /mod.ts:9:17
     |
   9 | export function c() {
     |                 - this function's return type could not be inferred
     |
  10 |   return c;
     |   ------ because the value returned here
     |          - contains this expression, of which the type could not be inferred
     |
     = hint: add an explicit return type to the function

    info: all functions in the public API must have an known return type
    info: the type of arbitrary expressions can not be inferred without a type checker
    docs: https://jsr.io/go/slow-type-unknown-return-type

  error[unknown-return-type]: unknown return type for function in the public API
    --> /mod.ts:14:3
     |
  14 |   d() {
     |   - this function's return type could not be inferred
     |
  15 |     return D;
     |     ------ because the value returned here
     |            - contains this expression, of which the type could not be inferred
     |
     = hint: add an explicit return type to the function

    info: all functions in the public API must have an known return type
    info: the type of arbitrary expressions can not be inferred without a type checker
    docs: https://jsr.io/go/slow-type-unknown-return-type

  error[unknown-var-type]: unknown type for variable in the public API
    --> /mod.ts:19:14
     |
  19 | export const e = {
     |              ^ this variable's type could not be inferred because its initializer
     |
  20 |   e() {
     |   - contains this object method, of which the return type could not be inferred
     |
  21 |     return e;
     |     ------ because the value returned here
     |            - contains this expression, of which the type could not be inferred
     |
     = hint: add an explicit return type annotation to the object method in the variable declaration initializer

    info: all variables in the public API must have a known type
    info: the type of arbitrary expressions can not be inferred without a type checker
    docs: https://jsr.io/go/slow-type-unknown-var-type

